--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'dumbledor_1regular';
     color: #000;
     font-size: 22px;
+    background-image: url('images/background.webp');
+    background-size: 1920px 1169px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 @media (max-width: 426px) {
@@ -11,6 +15,10 @@ body {
         font-family: 'dumbledor_1regular';
         color: #000;
         font-size: 22px;
+        background-image: url('images/bgcel.webp');
+        background-size: 338px 338px;
+        background-repeat: inherit;
+        background-attachment: fixed;
     }
 }
 
