--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'dumbledor_1regular';
     color: #000;
     font-size: 22px;
-    background-image: url('images/background.webp');
+    background-image: url('images/background.png');
     background-size: 1920px 1169px;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -15,7 +15,7 @@ body {
         font-family: 'dumbledor_1regular';
         color: #000;
         font-size: 22px;
-        background-image: url('images/bgcel.webp');
+        background-image: url('images/bgcel.png');
         background-size: 338px 338px;
         background-repeat: inherit;
         background-attachment: fixed;
@@ -492,7 +492,7 @@ a.menulink:active {
 }
 
 #myCarouselDepoimentos {
-    background-image: url('images/bgbanner.webp');
+    background-image: url('images/bgbanner.png');
     background-size: 1150px 1115px;
     background-repeat: no-repeat;
     background-attachment: fixed;
