--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -393,13 +393,13 @@ a.linkClientesAdmin:active {
 }
 
 #header {
-    background: rgba(0, 0, 0, 0.7);
-    color: #f7b334;
+    background: #ffffff;
+    color: #000;
 }
 
 @media (max-width: 992px) {
     #header {
-        background: #6c1010 !important;
+        background: #ffffff !important;
     }
 
     a.link-padraoum {
