--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -399,7 +399,7 @@ a.linkClientesAdmin:active {
 
 #header {
     background: #ffffff;
-    color: #000;
+    color: #c69e88;
 }
 
 @media (max-width: 992px) {
