--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -14,9 +14,11 @@ body {
 
 .corpadrao1 {
     color: #c69e88 !important;
+    background: #6c1010 !important;
 } 
 .corpadrao2 {
     color: #6c1010 !important;
+    background: #c69e88 !important;
 }
 
 @media (max-width: 426px) {
