--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -12,7 +12,7 @@ body {
 
 /*  Cores padrão do site  */
 .corpadrao1 {
-    color: #6c1010 !important;
+    color: #000 !important;
     background: #c69e88 !important;
 } 
 .corpadrao2 {
