--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -455,7 +455,7 @@ a.linkClientesAdmin:active {
 
 @media (max-width: 992px) {
     .estilomenu {
-        background-color: #000000d9 !important;
+        background-color: #ffffffd9 !important
     }
 }
 
