--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -415,7 +415,12 @@ a.linkClientesAdmin:active {
 
     a.link-padraoum {
         text-decoration: none;
-        color: #ffffff;
+        color: #c69e88;
+    }
+
+    a.link-padraoum:hover {
+        text-decoration: none;
+        color: #6c1010 !important;
     }
 }
 
