--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -26,7 +26,7 @@ body {
         font-family: 'dumbledor_1regular';
         color: #000;
         font-size: 22px;
-        background-image: url('images/bgcel.png');
+        background-image: url('/home/epapodetarotcom/public_html/images/bgcel.png');
         background-size: 338px 338px;
         background-repeat: inherit;
         background-attachment: fixed;
