--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'dumbledor_1regular';
     color: #000;
     font-size: 22px;
-    background-image: url('/home/epapodetarotcom/public_html/images/background.png');
+    background-image: url('https://www.epapodetarot.com.br/images/background.png');
     background-size: 1920px 1169px;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -26,7 +26,7 @@ body {
         font-family: 'dumbledor_1regular';
         color: #000;
         font-size: 22px;
-        background-image: url('/home/epapodetarotcom/public_html/images/bgcel.png');
+        background-image: url('https://www.epapodetarot.com.br/images/bgcel.png');
         background-size: 338px 338px;
         background-repeat: inherit;
         background-attachment: fixed;
