--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -306,6 +306,10 @@ body::-webkit-scrollbar-thumb:hover {
     color: #963f10;
 }
 
+.vinho {
+    color: #6c1010;
+}
+
 .verde {
     color: #636f03;
 }
