--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -363,7 +363,7 @@ a.link-padraoum:hover {
 
 a.link-padraodois {
     text-decoration: underline;
-    color: #2090bc;
+    color: #c69e88;
 }
 
 a.link-padraodois:hover {
@@ -556,7 +556,7 @@ main {
 }
 
 #copy {
-    background: #2090BC;
+    background: #6c1010;
     color: #fff;
     padding: 20px;
     margin-top: 0px;
