--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -368,7 +368,7 @@ a.link-padraodois {
 
 a.link-padraodois:hover {
     text-decoration: underline;
-    color: #000000;
+    color: #fff;
 }
 
 a.link-padraotres {
