--- a/public_html/chat/assets/css/mobile.css
+++ b/public_html/chat/assets/css/mobile.css
@@ -8,7 +8,8 @@ html, body{
 body {
     color: #000;
     font-size: 15px;
-    background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.png') 50% 0 fixed no-repeat !important;
+    /*background: #1b2933 url('https://www.temploqsara.com.br/images/crop.jpg') 50% 0 fixed no-repeat !important;*/
+    background: #d9dcdc;
     background-size: 1920px 1169px;
     background-size: cover !important;
 }
@@ -36,17 +37,13 @@ textarea.form-control {
     height: 40px;
 }
 #hedchat {
-	padding: 5px;
+	padding: 1px;
 	position: absolute; 
     top: 0px;
     width: 100%;
     height: 44px;
 	z-index: 1;
-	background: #ffffff; /* Old browsers */
-	background: -moz-linear-gradient(top, #ffffff 0%, #e8e8e8 57%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, #ffffff 0%,#e8e8e8 57%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, #ffffff 0%,#e8e8e8 57%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e8e8e8',GradientType=0 ); /* IE6-9 */
+	background: #d9dcdc;
 }
 #logo {
     margin-top: -5px;
@@ -122,7 +119,7 @@ h1 {
 }
 #frm-msg label textarea{
 	width:750px;
-	height: 0px;
+	height: 0px
 	border:1px solid #ccc;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
@@ -153,7 +150,7 @@ h1 {
 	background: #fff;
 	color: #000;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.2);
+	background: #fff;
 }
 #content p{
 	padding: 3px 3px 3px 3px;
@@ -161,16 +158,16 @@ h1 {
 }
 .me {
     text-align: left;
-    background: #2090BC;
-	color: #fff;
+    background: #d9e4e4;
+    color: #000;
 	border-radius: 4px;
 	display: table;
 	margin-top: 5px;
 }
 .other {
     text-align: left;
-    background: #BF9328;
-	color: #fff;
+    background: #5e78a7ba;
+    color: #fff;
 	border-radius: 4px;
 	display: table;
 	margin-top: 5px;
@@ -187,7 +184,7 @@ h1 {
 	font-size:10px;
 }
 footer {
-	background: rgba(0, 0, 0, 0.2);
+	background: #d9dcdc;
     bottom: 0px;
     width: 100%;
     height: 70px;
