--- a/public_html/chat/assets/css/mobile.css
+++ b/public_html/chat/assets/css/mobile.css
@@ -119,7 +119,7 @@ h1 {
 }
 #frm-msg label textarea{
 	width:750px;
-	height: 0px
+	height: 0px;
 	border:1px solid #ccc;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
