--- a/public_html/chat/assets/css/style.css
+++ b/public_html/chat/assets/css/style.css
@@ -8,7 +8,7 @@ html, body{
 body {
     color: #fff;
     font-size: 15px;
-    background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.jpg') 50% 0 fixed no-repeat !important;
+    background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.png') 50% 0 fixed no-repeat !important;
     background: #d9dcdc;
     background-size: 1920px 1169px;
     background-size: cover !important;
