--- a/public_html/chat/assets/css/style.css
+++ b/public_html/chat/assets/css/style.css
@@ -8,8 +8,8 @@ html, body{
 body {
     color: #fff;
     font-size: 15px;
-    background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.png') 50% 0 fixed no-repeat !important;
-    /* background: #d9dcdc; */
+    /* background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.png') 50% 0 fixed no-repeat !important; */
+    background: #d9dcdc;
     background-size: 1920px 1169px;
     background-size: cover !important;
 }
@@ -72,8 +72,8 @@ textarea.form-control {
     width: 100%;
     height: 80px;
     z-index: 1;
-    background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.png') 50% 0 fixed no-repeat !important;
-    /* background: #d9dcdc; */
+    /* background: #1b2933 url('https://www.epapodetarot.com.br/images/crop.png') 50% 0 fixed no-repeat !important; */
+    background: #d9dcdc;
     background-size: 1920px 1169px;
     background-size: cover !important;
 }
