--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -17,7 +17,7 @@ body {
 } 
 .corpadrao2 {
     color: #c69e88 !important;
-    background: #6c1010 !important;
+    background: #e3dede !important;
     border: none;
 }
 
