--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -567,7 +567,7 @@ main {
 }
 
 #copy {
-    background: #6c1010;
+    background: #fff1e9;
     color: #fff;
     padding: 20px;
     margin-top: 0px;
