--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -558,7 +558,7 @@ main {
     z-index: 99999;
     margin: 10px;
     font-size: 40px;
-    color: #6c1010;
+    color: #fff1e9;
 }
 
 #subir :hover {
