--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -568,7 +568,7 @@ main {
 
 #copy {
     background: #fff1e9;
-    color: #fff;
+    color: #ccc;
     padding: 20px;
     margin-top: 0px;
     margin-bottom: 50px;
