--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -19,7 +19,6 @@ body {
     color: #c69e88 !important;
     background: #fff1e9 !important;
     border: none;
-    padding-top: 6px;
 }
 
 @media (max-width: 426px) {
@@ -699,3 +698,10 @@ main {
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
+
+.btn-group-lg>.btn, .btn-lg {
+    padding: 15px 0px 10px 0px;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
