--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -14,6 +14,7 @@ body {
 .corpadrao1 {
     color: #fff !important;
     background: #c69e88 !important;
+    padding-bottom: 0px;
 } 
 .corpadrao2 {
     color: #c69e88 !important;
