--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -706,3 +706,24 @@ main {
     line-height: 1.5;
     border-radius: 0.3rem;
 }
+
+.badge-pill {
+    padding-right: 0.6em;
+    padding-top: 0.3em;
+    padding-bottom: 0px !important;
+    padding-left: 0.6em;
+    border-radius: 10rem;
+}
+
+.badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
