--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -700,3 +700,45 @@ main {
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
+.btn-group-lg>.btn, .btn-lg {
+    padding: 15px 15px 10px 15px;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
+
+.badge-pill {
+    padding-right: 0.6em;
+    padding-top: 0.3em;
+    padding-bottom: 0px !important;
+    padding-left: 0.6em;
+    border-radius: 10rem;
+}
+
+.badge {
+    display: inline-block;
+    padding: 0.35em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+/* Menu centralizado */
+.navbar-expand-lg .navbar-collapse {
+    display: -ms-flexbox!important;
+    display: flex!important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    justify-content: center!important;
+}
+
+/* Espaçamentos links de menu */
+.nav-link {
+    display: block;
+    padding: 15px 10px 10px 10px;
+}
