--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -729,3 +729,12 @@ main {
 }
 
 /* Menu centralizado */
+.navbar-expand-lg .navbar-collapse {
+    display: -ms-flexbox!important;
+    display: flex!important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    justify-content: center!important;
+}
+
+/* Espaçamentos links de menu */
