--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -729,12 +729,10 @@ main {
 }
 
 /* Menu centralizado */
-.navbar-expand-lg .navbar-collapse {
-    display: -ms-flexbox!important;
-    display: flex!important;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-    justify-content: center!important;
-}
+
 
 /* Espaçamentos links de menu */
+.nav-link {
+    display: block;
+    padding: 15px 10px 10px 10px;
+}
