--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -740,6 +740,7 @@ main {
 }
 
 /* Espaçamento submenu celular */
-#navbarDropdown {
-    padding-left: 15px;
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: rgba(0,0,0,.7);
+    padding-left: 20px;
 }
