--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -763,3 +763,9 @@ main {
     display: block;
     padding: 15px 10px 10px 10px;
 }
+
+/* Menu celular background */
+.navbar-light .navbar-toggler {
+    color: rgba(0,0,0,.5);
+    border-color: rgb(255 255 255 / 10%);
+}
