--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -29,7 +29,7 @@ body {
         font-family: 'Anek Telugu', sans-serif;
         color: #000;
         font-size: 22px;
-        background-image: url('https://www.epapodetarot.com.br/images/bgcel.png');
+        /* background-image: url('https://www.epapodetarot.com.br/images/bgcel.png'); */
         background-size: 338px 338px;
         background-repeat: inherit;
         background-attachment: fixed;
